sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: not found: value swapped
    swapped = false;
    ^AlgBubbleSort1:5: error: value getValueCount is not a member of Int
    for (i <- 0 getValueCount()-2) {
                ^AlgBubbleSort1:5: error: value - is not a member of Unit
    for (i <- 0 getValueCount()-2) {
                               ^AlgBubbleSort1:8: error: not found: value swapped
        swapped = true;
        ^AlgBubbleSort1:11: error: not found: value swapped
  } while (swapped);
           ^